<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#78CD4B"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/peso"
        android:inputType="numberDecimal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        />
    <EditText
        android:id="@+id/altura"
        android:inputType="numberDecimal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/calcular"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:backgroundTint="#FF5722"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tVpeso"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/imc"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/imcCalculado"
        android:layout_marginHorizontal="100dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tVcategoría"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#18350D"
        android:text="@string/categoria"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/categoriaPeso"
        android:layout_marginHorizontal="100dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>



</LinearLayout>